change connexion variable text in json

--- a/shop/public/locales/en/common.json
+++ b/shop/public/locales/en/common.json
@@ -11,7 +11,7 @@
   "auth-menu-checkout": "Commander",
   "auth-menu-my-orders": "Mes commandes",
   "auth-menu-logout": "Déconnexion",
-  "join-button": "Rejoindre",
+  "join-button": "Connexion",
   "change-locale": "Passer en allemand",
   "text-search": "Rechercher",
   "text-burger-menu": "Menu Burger",
