change icons payement in footer

--- a/shop/public/locales/en/common.json
+++ b/shop/public/locales/en/common.json
@@ -353,6 +353,7 @@
   "text-subscribe-now": "Abonnez-vous maintenant",
   "text-subscribe-details": "Abonnez-vous à la newsletter et aux actualités en fonction de vos intérêts",
   "text-explore": "Explorer",
+  "text-legal-mention" : "Informations légales",
   "text-about-us": "À propos de nous",
   "text-sitemap": "Plan du site",
   "text-bookmarks": "Signets",
