remove unnecessary file

--- a/shop/public/locales/en/common.json
+++ b/shop/public/locales/en/common.json
@@ -490,6 +490,6 @@
   "placeholder-search-location": "Rechercher le formulaire de localisation ici",
   "text-location": "Emplacement",
   "email-send-successfully": "Email envoyé avec succès",
-  "text-payement-method": "Mode de paiement",
+  "text-payement-method": "Moyens de paiement",
   "text-security-certificate": "Certificats de sécurité"
 }
