add footer address

--- a/shop/public/locales/en/common.json
+++ b/shop/public/locales/en/common.json
@@ -291,7 +291,7 @@
   "text-reason": "Raison",
   "text-id": "ID",
   "text-paid-from-wallet": "Payé depuis le portefeuille",
-  "text-copyright": "Droit d'auteur",
+  "text-copyright": "Tous les droits appartiennent aux propriétaires respectifs",
   "text-rights-reserved": "Tous droits réservés",
   "text-sending": "Envoi",
   "text-enter-email": "Écrivez votre email ici",
