edit checkout commom.json

--- a/shop/public/locales/en/common.json
+++ b/shop/public/locales/en/common.json
@@ -8,7 +8,7 @@
   "nav-menu-contact": "Contact",
   "user-avatar": "avatar de l'utilisateur",
   "auth-menu-profile": "Profil",
-  "auth-menu-checkout": "Checkout",
+  "auth-menu-checkout": "Commande",
   "auth-menu-my-orders": "Mes commandes",
   "auth-menu-logout": "Déconnexion",
   "join-button": "Connexion",
